src/test/deca/context/invalid/classDefinition-extendsBegin.context
classDefinition-extendsBegin.deca:1:
